--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "engines": {
-  "node": "20.x"
-},
   "eslintConfig": {
     "extends": [
       "react-app",
